<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!-- Imagem de boas-vindas -->


    <!-- Texto de boas-vindas -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sinopse_app"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/black" />
    <!-- Botão para continuar -->
    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        android:textColor="@color/white"
        android:background="@color/red"
        android:padding="16dp"
        android:layout_margin="16dp"/>

</LinearLayout>
