<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.DietFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:id="@+id/title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center_horizontal|top"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linear_layout_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:text="@string/breakfast"
            style="@style/ingredient"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/breakfast_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_breakfast"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_lunch"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/linear_layout_lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_breakfast"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:text="@string/lunch"
            style="@style/ingredient"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lunch_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_lunch"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_snack"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/linear_layout_snack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_lunch"
        android:orientation="vertical">

        <TextView
            android:id="@+id/snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:text="@string/snack"
            style="@style/ingredient"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/snack_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_snack"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_dinner"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/linear_layout_dinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_snack"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:text="@string/dinner"
            style="@style/ingredient"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dinner_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>