<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    app:layout_constraintCircleRadius="50dp">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_period_food"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        />

    <com.google.android.material.card.MaterialCardView
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_dialog"
        app:cardElevation="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView

                android:text="@string/breakfast"
                app:drawableStartCompat="@drawable/ic_baseline_free_breakfast_24"
                style="@style/DialogOptions"
                 />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:importantForAccessibility="no"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/container_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_1"
        app:cardElevation="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView

                android:text="@string/lunch"
                app:drawableStartCompat="@drawable/ic_baseline_free_breakfast_24"
                style="@style/DialogOptions"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:importantForAccessibility="no"
                />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/container_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_2"
        app:cardElevation="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView

                android:text="@string/snack"
                app:drawableStartCompat="@drawable/ic_baseline_free_breakfast_24"
                style="@style/DialogOptions"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:importantForAccessibility="no"
                />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/container_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_3"
        app:cardElevation="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView

                android:text="@string/dinner"
                app:drawableStartCompat="@drawable/ic_baseline_free_breakfast_24"
                style="@style/DialogOptions"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:importantForAccessibility="no"
                />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>